@@ -1,3 +1,10 @@
+2003-04-19  Jon Schewe  <jpschewe@mtu.net>
+
+	* src/fll/xml/GenerateDB.java (generateDB): Removed fll_admin as a
+	database user.  Just use fll as hte only database user with full
+	privileges.  At this point I can't come up with a good reason for
+	having two different database users. (707870)
+
 2003-04-04  Jon Schewe  <jpschewe@mtu.net>
 
 	* docs/README.developer: Added information about JSTL
